--- a/print.html
+++ b/print.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>発注書定番横</title>
+    <title>Print Test</title>
     <style>
         * {
             margin: 6px;
@@ -48,7 +48,7 @@
 
         td.lg,
         th.lg {
-            font-size: 10px;
+            font-size: 12px;
         }
 
         div.base {
@@ -111,11 +111,12 @@
             .button{
                 display: none;
             }
-        }  
+        }    
     </style>
 </head>
 
 <body>
+    <button class="button">ボタン</button>
     <div
         style="width: 200px;padding-left: 15px;text-align: center;font-size: 24pt;font-weight: bold;display:flex;border: 2px solid #000;">
         定番発注書</div>
@@ -153,7 +154,6 @@
             </tbody>
         </table>
     </div>
-
     <div style="text-align: left;">
         <table width="1550px" border="1" cellpadding="0" cellspacing="0">
             <tbody>
@@ -493,7 +493,6 @@
                     <td class="num">0.00</td>
                     <td class="num">1,000</td>
                 </tr>
-
             </tbody>
         </table>
         <div class="base">
@@ -577,6 +576,7 @@
                 <p>⑳</p>
                 <img class="item" alt="" src="img/4bc8b1826f9ec4f24517b211232621d3477f9590.png">
             </div>
+        </div>
     </div>
 </body>
 
