--- a/teiban_tate30.html
+++ b/teiban_tate30.html
@@ -52,8 +52,9 @@
         }
 
         div.base {
-            padding: 10px 0 0 0;    
-            border: 2px solid rgb(204, 39, 39);
+            margin: 0 0 0 2;
+            padding: 0 0 0 0;    
+            border: 2px solid rgb(0, 0, 0);
             display: flex;
             flex-wrap: wrap;
         }
@@ -61,9 +62,9 @@
         div.koma {
             display: flex;
             margin: 0 0 10px 10px;
-            border: 2px solid rgb(30, 153, 147);
-            width: 200px;
-            height: 200px;
+            /* border: 2px solid rgb(30, 153, 147); */
+            width: 120px;
+            height: 120px;
             
         }
 
@@ -71,6 +72,45 @@
             width: auto;
             height: 85%;
         }
+
+        .no {
+            width: 20px;
+        }
+
+        .code {
+            width: 155px;
+        }
+
+        .hin {
+            width: 220px;
+        }
+
+        .jan {
+            width: 175px;
+        }
+
+        .color {
+            width: 740px;
+        }
+
+        .cs {
+            width: 175px;
+        }
+
+        .colm {
+            width: 145px;
+        }
+
+        @page {
+            size: A4 landscape;
+            /*            size: A4 ;*/
+            margin: 3mm 6mm;
+        }
+        @media print {  
+            .button{
+                display: none;
+            }
+        }    
     </style>
 </head>
 
@@ -117,20 +157,20 @@
         <table border="1" cellpadding="0" cellspacing="0">
             <tbody>
                 <tr>
-                    <th width="20">No</th>
-                    <th width="155">商品コード</th>
-                    <th width="175">品番</th>
-                    <th width="350">品名</th>
-                    <th width="175">JANコード</th>
-                    <th width="700">色</th>
-                    <th width="175">C/S</th>
-                    <th width="175">数量</th>
-                    <th width="175">単価 (円)</th>
-                    <th width="175">＄単価</th>
-                    <th width="175">為替</th>
-                    <th width="175">経費率</th>
-                    <th class="lg" width="175">ロイヤリティ</th>
-                    <th width="175">上代</th>
+                    <th class="no">No</th>
+                    <th class="code">商品コード</th>
+                    <th class="code">品番</th>
+                    <th class="hin">品名</th>
+                    <th class="jan">JANコード</th>
+                    <th class="color">色</th>
+                    <th class="cs">C/S</th>
+                    <th class="colm">数量</th>
+                    <th class="colm">単価 (円)</th>
+                    <th class="colm">＄単価</th>
+                    <th class="colm">為替</th>
+                    <th class="colm">経費率</th>
+                    <th class="colm">ﾛｲﾔﾘﾃｨ</th>
+                    <th class="colm">上代</th>
                 </tr>
                 <tr>
                     <td>1</td>
