--- a/div_layoutA4.html
+++ b/div_layoutA4.html
@@ -18,16 +18,18 @@
             flex-wrap: wrap;
             break-before: page;
         }
+
         .base {
             width: 770px;
             height: 1050px;
             margin: 0 0 0 6px;
-            padding: 0 0 0 0;    
+            padding: 0 0 0 0;
             border: 2px solid rgb(204, 39, 39);
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
         }
+
         .sizai_tehai {
             display: flex;
             flex-wrap: wrap;
@@ -35,16 +37,19 @@
             width: 768px;
             height: 980px;
             margin: 0 0 0 0;
-            padding: 0 0 0 0;    
+            padding: 0 0 0 0;
             border: 1px solid rgb(204, 39, 39);
         }
-        .sizai,tehai {
+
+        .sizai,
+        tehai {
             width: 385px;
             height: 980px;
             margin: 0 0 0 0;
-            padding: 0 0 0 0;    
+            padding: 0 0 0 0;
             border: 1px solid rgb(204, 39, 39);
         }
+
         .koma {
             display: flex;
             margin: 0 0 10px 10px;
@@ -52,11 +57,13 @@
             width: 100px;
             height: 100px;
         }
+
         img.item {
             width: auto;
             height: 85%;
         }
-        .header2{
+
+        .header2 {
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
@@ -65,87 +72,100 @@
             width: 100%;
             height: 60px;
         }
-        .header{
+
+        .header {
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 60px;
         }
-        .top{
+
+        .top {
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 100px;
         }
-        .carton{
+
+        .carton {
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 100px;
         }
-        .item{
+
+        .item {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 120px;
         }
-        .item2{
+
+        .item2 {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 220px;
         }
-        .zuan{
+
+        .zuan {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 300px;
         }
-        .pantone{
+
+        .pantone {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 70px;
         }
-        .approval{
+
+        .approval {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 50px;
         }
-        .sizai_koma4{
+
+        .sizai_koma4 {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 240px;
         }
-        .sizai_koma3{
+
+        .sizai_koma3 {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 740px;
         }
-        .sizai_koma2{
+
+        .sizai_koma2 {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 500px;
         }
-        .sizai_koma1{
+
+        .sizai_koma1 {
             display: flex;
             margin: 0 0 0 0;
             border: 1px solid rgb(30, 153, 147);
             width: 100%;
             height: 980px;
         }
+
         * {
             margin: 0;
             padding: 0;
@@ -157,16 +177,18 @@
             flex-wrap: wrap;
             break-before: page;
         }
+
         .base {
             width: 770px;
             height: 1050px;
             margin: 0 0 0 6px;
-            padding: 0 0 0 0;    
+            padding: 0 0 0 0;
             border: 2px solid rgb(204, 39, 39);
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
         }
+
         .sizai_tehai {
             display: flex;
             flex-wrap: wrap;
@@ -174,16 +196,19 @@
             width: 768px;
             height: 980px;
             margin: 0 0 0 0;
-            padding: 0 0 0 0;    
+            padding: 0 0 0 0;
             border: 1px solid rgb(204, 39, 39);
         }
-        .sizai,tehai {
+
+        .sizai,
+        tehai {
             width: 385px;
             height: 980px;
             margin: 0 0 0 0;
-            padding: 0 0 0 0;    
+            padding: 0 0 0 0;
             border: 1px solid rgb(204, 39, 39);
         }
+
         .koma {
             display: flex;
             margin: 0 0 10px 10px;
@@ -191,107 +216,17 @@
             width: 100px;
             height: 100px;
         }
+
         img.item {
             width: auto;
             height: 85%;
         }
-        .header2{
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: column;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 60px;
-        }
-        .header{
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 60px;
-        }
-        .top{
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 100px;
-        }
-        .carton{
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 100px;
-        }
-        .item{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 120px;
-        }
-        .item2{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 220px;
-        }
-        .zuan{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 300px;
-        }
-        .pantone{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 70px;
-        }
-        .approval{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 50px;
-        }
-        .sizai_koma4{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 240px;
-        }
-        .sizai_koma3{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 740px;
-        }
-        .sizai_koma2{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 490px;
-        }
-        .sizai_koma1{
-            display: flex;
-            margin: 0 0 0 0;
-            border: 1px solid rgb(30, 153, 147);
-            width: 100%;
-            height: 980px;
-        }
 
         @page {
             /*size: A4 landscape;*/
-              size: A4 ;
+            size: A4;
             margin: 6mm 6mm;
         }
-
     </style>
 </head>
 
@@ -299,64 +234,69 @@
     <div class="pages">
         <div class="base">
             <div class="header">
-            1
+                <div
+                    style="width: 270px;padding-left: 15px;text-align: center;font-size: 20pt;font-weight: bold;display:flex;border: 2px solid #000;">
+                    <span>定番 試作依頼書</span><span  style="font-size: 8px;">Request from for Preproduction</span></div>
+                <div style="position:absolute;top: 0px; right: 10px; ">page 1/1</div>
+                <div style="position:absolute;top: 25px; right: 10px; ">作成日 0000/00/00</div>
+                <div style="position:absolute;top: 50px; right: 10px; ">作成者 増田汐里</div>
             </div>
             <div class="top">
-            2
+                2
             </div>
             <div class="carton">
-			3
+                3
             </div>
             <div class="item">
-            4
+                4
             </div>
             <div class="item2">
-            5
+                5
             </div>
             <div class="zuan">
-            6
+                6
             </div>
             <div class="pantone">
-            7
+                7
             </div>
             <div class="approval">
-            8
+                8
             </div>
         </div>
     </div>
     <div class="pages">
         <div class="base">
             <div class="header2">
-            1
+                1
             </div>
-	        <div class="sizai_tehai">
-		        <div class="sizai">
-		            <div class="sizai_koma4">①</div>
-		            <div class="sizai_koma4">②</div>
-		            <div class="sizai_koma2">③</div>
-		        </div>
-		        <div class="sizai">
-		            <div class="sizai_koma1">④</div>
-		        </div>
-	        </div>
+            <div class="sizai_tehai">
+                <div class="sizai">
+                    <div class="sizai_koma4">①</div>
+                    <div class="sizai_koma4">②</div>
+                    <div class="sizai_koma2">③</div>
+                </div>
+                <div class="sizai">
+                    <div class="sizai_koma1">④</div>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="pages">
         <div class="base">
             <div class="header2">
-            1
+                1
             </div>
-	        <div class="sizai_tehai">
-		        <div class="sizai">
-		            <div class="sizai_koma4">①</div>
-		            <div class="sizai_koma3">②</div>
-		        </div>
-		        <div class="sizai">
-		            <div class="sizai_koma2">③</div>
-		            <div class="sizai_koma2">④</div>
-		        </div>
-	        </div>
+            <div class="sizai_tehai">
+                <div class="sizai">
+                    <div class="sizai_koma4">①</div>
+                    <div class="sizai_koma3">②</div>
+                </div>
+                <div class="sizai">
+                    <div class="sizai_koma2">③</div>
+                    <div class="sizai_koma2">④</div>
+                </div>
+            </div>
         </div>
     </div>
 
